sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2: error: not found: value cocktailSort2
		cocktailSort2();
                ^AlgCocktailSort2:11: error: not found: value L
 	  for (k<- L to 0 by -1 ){
                   ^AlgCocktailSort2:15: error: not found: value L
         L=L-1
         ^AlgCocktailSort2:19: error: not found: value L
  	for (l<-0 to L){
                     ^