sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort() {
  var Change1: Boolean=true
  var Change2: Boolean= true
  var F =getNombreValeurs()-2
  var D = 0
  
  while (Change1==true || Change2==true){
    Change1=false
    Change2=false
 	  for (k<- L to 0 by -1 ){
   
   		 if (getValeur(k) > getValeur(k+1)){
     		 echange(k,k+1)
         L=L-1
      	 Change1=true
  	} 	     
  }     
  	for (l<-0 to L){
    		if (getValeur(l) > getValeur(l+1)){
      		echange(l,l+1)
          D=D+1
       		Change2=true
          
    
  		}
  }
  
  
}
}